add：忽略本地开发环境配置

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ node_modules
 # local env files
 .env.local
 .env.*.local
-/config/debug
 
 # Log files
 npm-debug.log*
@@ -20,3 +19,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+config/debug.js
