--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "start": "cross-env NODE_ENV=development vue-cli-service serve",
+    "mock": "cross-env NODE_ENV=mock vue-cli-service serve",
+    "build": "cross-env NODE_ENV=production vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test": "cross-env NODE_ENV=testing vue-cli-service test:unit",
+    "coverage": "cross-env NODE_ENV=testing vue-cli-service test:unit --coverage",
+    "watch": "cross-env NODE_ENV=testing vue-cli-service test:unit --watch"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -27,6 +30,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "commitizen": "^4.0.3",
+    "cross-env": "^6.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^6.2.1",
