--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development vue-cli-service serve",
-    "mock": "cross-env NODE_ENV=mock vue-cli-service serve",
     "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test": "cross-env NODE_ENV=testing vue-cli-service test:unit",
-    "coverage": "cross-env NODE_ENV=testing vue-cli-service test:unit --coverage",
-    "watch": "cross-env NODE_ENV=testing vue-cli-service test:unit --watch"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.19.0",
