--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pug": "^2.0.3",
     "pug-html-loader": "^1.1.5",
     "pug-plain-loader": "^1.0.0",
+    "vant": "^2.2.12",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.0.1"
@@ -25,6 +26,7 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.12.2",
     "commitizen": "^4.0.3",
     "cross-env": "^6.0.3",
     "cz-conventional-changelog": "^3.0.2",
@@ -38,6 +40,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^24.9.0",
     "js-cookie": "^2.2.1",
+    "postcss-pxtorem": "^4.0.1",
     "prettier": "^1.18.2",
     "vue-template-compiler": "^2.6.10"
   },
